Mobile scrollbar fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -717,6 +717,9 @@ select {
 
 
 /* Custom Scrollbar Styling */
+#amortization-shedule::-webkit-scrollbar{
+  z-index: 2;
+}
 
 #amortization-schedule::-webkit-scrollbar-track {
   display: initial;
